# IPFS-CRAWLER

./: .gitignore  README.md  pyproject.toml
src/: basic.py  main.py
src/data/: links.txt  numbers.json
