[tool.poetry]
name = "ipfs-crawler"
version = "0.1.0"
description = ""
authors = ["madgeniusblink <madgeniusblink@gmail.com>"]
readme = "README.md"
packages = [{include = "ipfs_crawler"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
